--- a/templates/upload.html
+++ b/templates/upload.html
@@ -384,7 +384,7 @@
                     <h3>Drag & Drop Your PDF Here</h3>
                     <p>Or click to select your PokerStars hand history file</p>
                 </div>
-                <input type="file" id="fileInput" class="file-input" accept=".pdf">
+                <input type="file" id="fileInput" class="file-input" accept=".txt">
             </div>
 
             <div class="loading" id="loading">
